manifold-ext-test/src/test/resources/extensions/java/util/List/ListExt4_Test.java
package extensions.java.util.List;

import manifold.ext.api.Extension;
import manifold.ext.api.This;
import java.util.List;
import java.util.ArrayList;
import java.util.stream.Stream;

/**
 */
@Extension
public class ListExt4_Test
  implements manifold.INotStructural { // error: extension interfaces must be structural
}
